--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fundació Ave Maria de Sitges</title>
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
     <style>
         :root {
             --gold: #C9A227;
@@ -73,7 +73,7 @@
         }
 
         .loader-text {
-            font-family: 'Playfair Display', serif;
+            font-family: 'Space Grotesk', sans-serif;
             font-size: clamp(24px, 5vw, 48px);
             color: var(--gold);
             opacity: 0;
@@ -95,7 +95,7 @@
         }
 
         .logo {
-            font-family: 'Playfair Display', serif;
+            font-family: 'Space Grotesk', sans-serif;
             font-size: 18px;
             font-weight: 500;
             color: white;
@@ -179,7 +179,7 @@
         }
 
         .hero-title {
-            font-family: 'Playfair Display', serif;
+            font-family: 'Space Grotesk', sans-serif;
             font-size: clamp(36px, 8vw, 100px);
             font-weight: 400;
             color: white;
@@ -264,7 +264,7 @@
         }
 
         .section-title {
-            font-family: 'Playfair Display', serif;
+            font-family: 'Space Grotesk', sans-serif;
             font-size: clamp(32px, 5vw, 56px);
             font-weight: 400;
             margin-bottom: 40px;
@@ -334,7 +334,7 @@
         }
 
         .stat-number {
-            font-family: 'Playfair Display', serif;
+            font-family: 'Space Grotesk', sans-serif;
             font-size: 48px;
             color: var(--gold);
             line-height: 1;
@@ -400,7 +400,7 @@
         }
 
         .service-number {
-            font-family: 'Playfair Display', serif;
+            font-family: 'Space Grotesk', sans-serif;
             font-size: 48px;
             color: var(--gold);
             opacity: 0.3;
@@ -413,7 +413,7 @@
         }
 
         .service-title {
-            font-family: 'Playfair Display', serif;
+            font-family: 'Space Grotesk', sans-serif;
             font-size: 24px;
             margin-bottom: 20px;
             transition: color 0.5s var(--transition);
@@ -447,7 +447,7 @@
         }
 
         .marquee-item {
-            font-family: 'Playfair Display', serif;
+            font-family: 'Space Grotesk', sans-serif;
             font-size: clamp(40px, 8vw, 80px);
             color: var(--dark);
             white-space: nowrap;
@@ -543,7 +543,7 @@
         }
 
         .contact-value {
-            font-family: 'Playfair Display', serif;
+            font-family: 'Space Grotesk', sans-serif;
             font-size: 24px;
             color: white;
         }
